@@ -531,3 +531,4 @@ seen. gmtime warning still there
 - Removed send_out_svsmode, not in use and broken too
 - Made Config say Unreal3.2
 - Made a popup menu for the tray icon to contain the same 'buttons' as the GUI does
+- Made Unreal run correctly on OpenBSD (thanks to PFAK for the shell)
